# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Api\Company\CompanyController;
+use App\Http\Controllers\Api\Role\RoleController;
 use App\Http\Controllers\Api\Users\UserController;
 use Illuminate\Support\Facades\Route;
 
@@ -12,10 +13,15 @@ Route::prefix('v1')->name('api.v1.')->group(function () {
         Route::post('/userStoreData', 'store');
         Route::put('/userUpdateData/{id}', 'update');
         Route::delete('/userDestroyData/{id}', 'destroy');
-        Route::put('/activateUser/{id}','userActivate');
-        Route::put('/userDisable/{id}','disableUser');
+        Route::put('/activateUser/{id}', 'userActivate');
+        Route::put('/userDisable/{id}', 'disableUser');
     });
 
+    Route::controller(RoleController::class)->group(function () {
+        Route::post('/roleStore', 'storeRole');
+        Route::put('/roleUpdate/{id}', 'updateRole');
+    })
+    ;
     Route::controller(CompanyController::class)->group(function () {
         Route::get('/aboutGetAllData', 'getData');
         Route::post('/aboutStoreData', 'store');
